src/style/scss/_typography.scss
html { font-weight: normal; font-family: "Futura Today Normal", Arial,sans-serif;}

h1, h2, h3, h4, h5, h6 {
  font-family: "Futura Today Bold", Arial,sans-serif;
  margin: 0;
}

.chatter {
  font-size: 1em;
  margin: 0 auto 2em auto;
  max-width: 30em;
}

.page-header {
  font-size: 1.2em;
  margin: 0.5em 0;
  text-transform: uppercase;
  @media (min-width: 1100px) {
    font-size: 2em;
  }
}

.iapp-header {
    color: white;
    font-family: "Futura Today DemiBold", Arial,sans-serif;
    text-align: center;
    text-transform: uppercase;
}

h2.iapp-header {
    margin-top: 6em;
    @media (max-width: 600px) {
        margin-top: 70px;
    }
}

.detail-header {
  font-family: "Futura Today DemiBold", Arial,sans-serif;
}

.info-text {
  max-width: 30em;
  margin: 0 auto;
}

strong {
  font-family: "Futura Today Bold", Arial,sans-serif;
}

